<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HireCook</string>
    <string name="FACEBOOK_APP_ID" translatable="false">741054493063557</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="user_profile_photo" translatable="false">http://baobaoloveyou.com/flowingdrawer_icon.png</string>
    <string name="username" translatable="false">UserName</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="con_password" translatable="false">Confirm Password</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="please_wait" translatable="false">Please wait . . . </string>
    <string name="crash_toast_text" translatable="false">Oops Crashe Occurred</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="simplified_coding" translatable="false">Simplified Coding</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="enter_title" translatable="false">Enter title</string>
    <string name="enter_message" translatable="false">Enter Message</string>
    <string name="write_something_here" translatable="false">Write Something Here</string>
    <string name="message_txt" translatable="false">Lorem ipsum dolor sit camet lorem ipsum dolor sit camet lorem ipsum</string>
    <string name="date_time" translatable="false">30/04/1993 10:25am</string>
    <string name="greetings" translatable="false">Greetings !</string>
    <string name="ok_got_it" translatable="false">Ok Got it</string>
    <string name="connection_txt" translatable="false">Look like you are Offline</string>
    <string name="continue_txt" translatable="false">Continue</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="image" translatable="false">Image</string>
    <string name="address" translatable="false">Address</string>
    <string name="cook" translatable="false">Cook</string>
    <string name="user" translatable="false">User</string>
    <string-array name="uploadImages">
        <item>Pick from gallery</item>
        <item>Click from camera</item>
        <item>Remove image</item>
    </string-array>
    <string name="image_uploaded" translatable="false">Image Uploaded</string>
    <string name="user_name" translatable="false">User Name</string>
    <string name="user_phone" translatable="false">Phone</string>
    <string name="sign_up_date" translatable="false">SignUp Date</string>
    <string-array name="user_type">
        <item>Select </item>
        <item>Employee</item>
        <item>Rider</item>
    </string-array>
    <string name="gender" translatable="false">Gender</string>
    <string name="verify" translatable="false">Verify Email: </string>
    <string name="status" translatable="false">Status</string>
    <string name="refresh" translatable="false">  Refresh</string>
    <string name="userId" translatable="false">User Id</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="generate_otp" translatable="false">Generate OTP</string>
    <string name="enter_otp" translatable="false">Enter OTP</string>
    <string name="verify_sign_in" translatable="false">Verify and Sign In</string>
    <string name="sign_out" translatable="false">sign out</string>
    <string name="verify_phone" translatable="false">Verify Phone</string>
    <string name="error" translatable="false">Please check your internet connection and try after some time</string>
    <string name="failed_due_to" translatable="false">Failed due to</string>
    <string name="phone_not_exist" translatable="false">Phone Number not exist</string>
    <string name="invalidate" translatable="false">Invalid email or password</string>
    <string name="update" translatable="false">Update</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="skip" translatable="false">SKIP</string>
    <string name="start" translatable="false">GOT IT</string>
    <string name="slide_1_title" translatable="false">Welcome to HireCooks!</string>
    <string name="slide_1_desc" translatable="false">Javatpoint is passionate to offer better technical content to the world.</string>
    <string name="slide_2_title" translatable="false">Android</string>
    <string name="slide_2_desc" translatable="false">Android is a mobile operating system developed by Google.</string>
    <string name="message" translatable="false">Message</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="go_back" translatable="false">Go back</string>
    <string name="hire" translatable="false">HIRE NOW</string>
    <string name="add_to_wish" translatable="false">ADD TO WISHLIST</string>
    <string name="send" translatable="false">Send</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="pincode" translatable="false">Pincode</string>
    <string name="slelect_image" translatable="false">Select Image</string>
    <string name="save_location" translatable="false">Save Location</string>
    <string name="title_activity_map_location" translatable="false">Map</string>
    <string name="location" translatable="false">Pick Your Location</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="longitude" translatable="false">Longitude</string>
    <string name="popular_products" translatable="false">Our Popular Products</string>
    <string name="default_notification_channel_id" translatable="false">Channel Id</string>
    <string name="search_products" translatable="false">Search Products</string>
    <string name="dialog_text" translatable="false">What Do you want ?</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="no_internet" translatable="false">No Internet Connection</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="resend_otp" translatable="false">Resend OTP</string>
    <string name="offline" translatable="false">OFFLINE</string>
    <string name="task" translatable="false">Your Task</string>
    <string name="search_items" translatable="false">Search items...</string>
    <string name="our_popular_product" translatable="false">OUR POPULAR PRODUCTS</string>
    <string name="already_have_account" translatable="false">already have account ? </string>
    <string name="don_t_have_account" translatable="false">don`t have account ?</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="checkout" translatable="false">CheckOut</string>
    <string name="offer_banner" translatable="false">Offers</string>
    <string name="similar_product" translatable="false">Similar Products</string>
    <string name="details" translatable="false">Description</string>
    <string name="add_to_cart" translatable="false">Add to Cart</string>
    <string name="buy_now" translatable="false">Buy Now</string>
    <string name="our_new_product" translatable="false">Our New Products</string>
    <string name="new_offers" translatable="false">NEW OFFERS</string>
    <string name="delivery_address" translatable="false">Delivery Address</string>
    <string name="delivery_time" translatable="false">Delivery Time</string>
    <string name="order_summery" translatable="false">Order Summery</string>
    <string name="sub_total" translatable="false">Sub Total</string>
    <string name="delivery_charge" translatable="false">Delivery Charge</string>
    <string name="grand_total" translatable="false">Grand Total</string>
    <string name="hirecook_mony" translatable="false">HireCook Money</string>
    <string name="promo" translatable="false">Promo</string>
    <string name="promo_code" translatable="false">Promo Code</string>
    <string name="pay_now" translatable="false">Pay Now</string>
    <string name="cash_on_delivery" translatable="false">Cash On Delivery</string>
    <string name="payable_rs_00" translatable="false">Payable Rs 00</string>
    <string name="your_order_will_deliver_in_3_hrs" translatable="false">Your Order will deliver in 3 hrs</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="shop_now" translatable="false">Start Shopping</string>
    <string name="firmid" translatable="false">FirmId</string>
    <string name="usertype" translatable="false">userType</string>
    <string name="website" translatable="false">Website</string>
    <string name="surendra_site" translatable="false">Surendra Site</string>
    <string name="standard_delivery_within_2_4_hrs" translatable="false">  &#x20; &#x2009; &#x200A; Standard Delivery within 2–4 Hrs</string>
    <string name="forgot_pass" translatable="false">Forgot Password</string>
    <string name="enter_mobile_number" translatable="false">Enter Mobile Number</string>
    <string name="my_wishlist" translatable="false">My WishList</string>
    <string name="messages" translatable="false">Messages</string>
    <string name="recived_order" translatable="false">Recived Order</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="terms_and_condition" translatable="false">Terms and Condition</string>
    <string name="share" translatable="false">Share</string>
    <string name="up_to_u20b9_200_free_delivery" translatable="false">UP TO ₹. 200 FREE Delivery</string>
    <string name="add" translatable="false">ADD +</string>
    <string name="similar" translatable="false">Similar</string>
    <string name="wishlist" translatable="false">Wishlist</string>
    <string name="detail" translatable="false">Details</string>
    <string name="not_in_stock" translatable="false">Not in Stock</string>
    <string name="order_not_accepting" translatable="false">Order Not Accepting</string>
    <string name="_0" translatable="false">0</string>
    <string name="rupee" translatable="false">\u20B9</string>
    <string name="no_result_found" translatable="false">No Result Found</string>
    <string name="your_cart_is_empty" translatable="false">Your Cart is Empty</string>
    <string name="items" translatable="false">Items</string>
    <string name="order_on" translatable="false">Order On</string>
    <string name="totalamount" translatable="false">TotalAmount</string>
    <string name="order_address" translatable="false">Order Address</string>
    <string name="payment_method" translatable="false">payment method</string>
    <string name="repeat_order" translatable="false">Repeat Order</string>
    <string name="available" translatable="false">Available</string>
    <string name="myorders" tools:ignore="MissingTranslation">MyOrders</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="name" translatable="false">Name</string>
    <string name="login_date" translatable="false">Login Date</string>
    <string name="login_address" translatable="false">Login Address</string>
    <string name="logout_address" translatable="false">Logout Address</string>
    <string name="created_at" translatable="false">Created At</string>
    <string name="firm_id" translatable="false">Firm Id</string>
    <string name="logout_date" translatable="false">Logout Date</string>
    <string name="id" translatable="false">ID</string>
</resources>