<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/menu_cooks"
            android:icon="@drawable/ic_profiles"
            android:title="@string/cook" />

        <item
            android:id="@+id/menuelist_destination"
            android:icon="@drawable/ic_wishlist_icon"
            android:title="@string/my_wishlist"/>

    </group>
    <group android:id="@+id/menu_group_2">

        <item
            android:id="@+id/menu_myorders"
            android:icon="@drawable/ic_cart_icon"
            android:title="@string/myorders"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

        <item
            android:id="@+id/menu_terms_and_condition"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/terms_and_condition" />

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />

    </group>
</menu>