<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_details_layout"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_medium">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image_cartlist"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:transitionName="simple_activity_transition"
            android:layout_gravity="center_vertical"/>
        <LinearLayout android:id="@+id/layout_item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/activity_horizontal_margin">
            <TextView android:id="@+id/textViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="16dp"
                android:textColor="@color/gen_black"/>
            <TextView android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>
            <TextView android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/text_size_small"/>
            <TextView android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/text_size_small"
                android:textColor="#4CAF50"
                android:layout_marginTop="@dimen/margin_small"/>
            <TextView android:id="@+id/textViewUserType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type"
                android:textSize="@dimen/text_size_small"/>
            <TextView android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="@dimen/text_size_small"/>
            <TextView android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/text_size_small"/>
            <TextView android:id="@+id/textViewSignUpDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_date"
                android:textSize="@dimen/text_size_small"/>
        </LinearLayout>
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <LinearLayout android:id="@+id/layout_task"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/send"
                app:srcCompat="@drawable/ic_clear_black_18dp"/>
            <TextView android:id="@+id/text_action1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/task"
                android:textSize="12sp"
                android:textColor="@color/style_color_primary"
                android:gravity="start"/>
        </LinearLayout>

        <View android:layout_width="@dimen/view_width_small"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>

        <LinearLayout android:id="@+id/layout_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/send"
                app:srcCompat="@drawable/ic_message_black_24dp" />
            <TextView android:id="@+id/text_action2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/message"
                android:textSize="12sp"
                android:textColor="@color/style_color_primary"
                android:gravity="start"/>
        </LinearLayout>

    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>
