<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/style_color_primary"
    android:padding="10dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/user_profile_photo"
        android:background="@android:drawable/stat_notify_error"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="44dp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/connection_txt"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/style_color_accent"
        android:text="@string/ok_got_it"
        android:textColor="#FFF"
        android:textSize="16sp" />

</RelativeLayout>