<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".Activity.Users.UserSignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.AccountKit.Outline"
            android:id="@+id/editTextEmail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/style_color_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="@dimen/size_14"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/verifyEmail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:textSize="@dimen/size_14"
            android:text="@string/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/userId"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:textSize="@dimen/size_14"
            android:text="@string/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/status"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:textSize="@dimen/size_14"
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>


        <LinearLayout
            android:id="@+id/status_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verifyBtn"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/size_14"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/white"
                android:text="@string/verify"
                android:background="@color/style_color_primary"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/refreshBtn"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="@dimen/size_14"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/white"
                android:text="@string/refresh"
                android:background="@color/style_color_primary"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/size_14"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:background="@color/style_color_primary"/>

    </LinearLayout>
</LinearLayout>