<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/appRoot"
    tools:context=".Activity.Users.UserSignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_20"
            tools:ignore="MissingConstraints">

            <View
                android:id="@+id/otp_view"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="-50dp"
                android:background="@drawable/ic_launcher"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/gray_btn_bg_pressed_color"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:text="@string/forgot_pass"
                android:textAllCaps="true"/>


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/email"
                android:paddingLeft="30dp"
                android:textSize="@dimen/size_14"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:elevation="2dp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:textSize="@dimen/size_14"
                android:textAlignment="viewStart"
                android:elevation="2dp"/>


            <EditText
                android:id="@+id/editTextConPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_design"
                android:hint="@string/con_password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:textSize="@dimen/size_14"
                android:textAlignment="viewStart"
                android:imeOptions="actionDone"
                android:elevation="2dp"/>

            <TextView
                android:id="@+id/button_submit_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:elevation="5dp"
                android:textAllCaps="true"
                android:background="@drawable/rounded"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>